--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">GeoTest</string>
+    <string name="app_name">GeoQuiz_Rogers</string>
     <string name="hello_world">Hello world!</string>
     <string name="q1">Constantinople is the largest city in Turkey</string>
     <string name="truebtn">True</string>
